k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reposhield-ingress
  namespace: reposhield-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost  # <-- Replace with your domain or use localhost for Minikube
      http:
        paths:
          - path: /reposhield/?(.*)
            pathType: Prefix
            backend:
              service:
                name: reposhield-service
                port:
                  number: 80
